--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,80 @@
-<div fxLayout="column" class="main-welcome">
-  <h1 class="title">
-    Welcome to WEB 450's - nodebucket Project <br />
-    <span class="subtitle">
-      Pay close attention to the requirements, double and triple check the files for code attribution, and do not wait until the last minute to begin working on your tasks.
-    </span>
-  </h1>
-</div>
+<!--
+============================================
+; Title: nodebucket
+; Author: Professor Krasso
+; Date: 21 August 2022
+; Modified By: Seth Kerrey
+; Description: nodebucket home component
+; Code Attribution: Additional code from buwebdev
+;   drag-n-drop code from material.angular.io [ref:A]
+;     https://material.angular.io/cdk/drag-drop/examples
+;===========================================
+-->
+
+<mat-card class="mat-elevation-z8">
+  <mat-card-title style="text-align: center;">
+    Workspace
+  </mat-card-title>
+  <br><br>
+  <mat-card-content>
+
+    <div fxLayout="row wrap">
+
+      <!-- Drag n Drop area -->
+      <mat-card class="mat-elevation-z0">
+        <mat-card-title></mat-card-title>
+        <mat-card-content class="align-center">
+
+          <!-- [ref:A] -->
+          <div class="drag-drop-container">
+            <h2>To do</h2>
+
+            <div
+              cdkDropList
+              #todoList="cdkDropList"
+              [cdkDropListData]="todo"
+              [cdkDropListConnectedTo]="[todoList, doingList, doneList]"
+              class="drag-drop-list"
+              (cdkDropListDropped)="drop($event)">
+              <div class="drag-drop-box" *ngFor="let item of todo" cdkDrag>{{item}}</div>
+            </div>
+          </div>
+
+          <div class="drag-drop-container">
+            <h2>Done</h2>
+
+            <div
+              cdkDropList
+              #doneList="cdkDropList"
+              [cdkDropListData]="done"
+              [cdkDropListConnectedTo]="[todoList, doingList, doneList]"
+              class="drag-drop-list"
+              (cdkDropListDropped)="drop($event)">
+              <div class="drag-drop-box" *ngFor="let item of done" cdkDrag>{{item}}</div>
+            </div>
+          </div>
+
+          <div class="drag-drop-container">
+            <h2>Done</h2>
+
+            <div
+              cdkDropList
+              #doingList="cdkDropList"
+              [cdkDropListData]="doing"
+              [cdkDropListConnectedTo]="[todoList, doingList, doneList]"
+              class="drag-drop-list"
+              (cdkDropListDropped)="drop($event)">
+              <div class="drag-drop-box" *ngFor="let item of doing" cdkDrag>{{item}}</div>
+            </div>
+          </div>
+          <!-- [/ref:A] -->
+
+
+        </mat-card-content>
+      </mat-card>
+
+    </div>
+
+  </mat-card-content>
+</mat-card>
+
