--- a/src/app/shared/base-layout/base-layout.component.css
+++ b/src/app/shared/base-layout/base-layout.component.css
@@ -1,11 +1,28 @@
+/*
+============================================
+; Title: nodebucket
+; Author: Professor Krasso
+; Date: 21 August 2022
+; Modified By: Seth Kerrey
+; Description: nodebucket base layout styling
+; Code Attribution: Additional code from buwebdev
+;===========================================
+*/
+
 .logo {
   margin-left: 75px;
   font-size: 24px;
-  font-weight: lighter;;
+  font-weight: lighter;
+}
+
+.navbar-whole {
+
 }
 
 .navbar-container {
   padding: 5px;
+  margin: auto;
+
 }
 
 .navbar-link {
@@ -14,7 +31,7 @@
 }
 
 .main-content {
-  padding-left: 30px;
+  height: 100%;
 }
 
 .footer {
@@ -36,4 +53,44 @@
 
 .bu-link:hover {
   text-decoration: underline;
+}
+
+/* Left Container */
+.left-container {
+  /* background-image: url("../../../assets/leaves.png");
+  box-shadow: inset 0 0 0 1000px rgba(236, 185, 57, .2); */ /* different background made by Mungujakisa Edmond from toptal*/
+  background-image: url("../../../assets/prism.png"); /* background image from toptal by Michal */
+  box-sizing: border-box;
+  border-radius: 5px;
+  text-align: center;
+  padding: 15px;
+  border: 4px solid #fff;
+  padding: 2em;
+  position: relative;
+  color: rgb(204, 204, 204);
+  font-family: 'Montserrat', sans-serif;
+}
+
+.left-container:before {
+  background: none;
+  border: 4px solid #fff;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  right: 4px;
+  bottom: 4px;
+  pointer-events: none;
+}
+
+.toolbar-left {
+  font-size: 20px;
+  font-weight: 500;
+  padding: 20px 0;
+}
+
+/* Right container */
+.right-container {
+  background-color: gold;
 }
