--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,21 @@
+/**
+============================================
+; Title: nodebucket
+; Author: Professor Krasso
+; Date: 21 August 2022
+; Modified By: Seth Kerrey
+; Description: nodebucket home component
+; Code Attribution: Additional code from buwebdev
+;   Montserrat font from google fonts
+;===========================================
+*/
+
 /* You can add global styles to this file, and also import other style files */
 
+/* Add google chrome font Montserrat 400, 500, 700 */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
+
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: 'Montserrat', sans-serif; }
+
+
