--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -28,6 +28,7 @@
           <!-- [ref:A] -->
           <div class="drag-drop-container">
             <h2>To do</h2>
+            <button mat-button>Create Task</button>
 
             <div
               cdkDropList
