--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -30,7 +30,7 @@
         <div class="div-text">
           Oops!
           <br><br>
-          You didn't reak the internet, but we can't find what you were looking for.
+          You didn't break the internet, but we can't find what you were looking for.
           <br><br>
         </div>
 
