--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -25,61 +25,31 @@
   font-size: 14px;
 }
 
-/* Drag n Drop */
-/* [ref:A] */
-.drag-drop-container {
-  width: 400px;
-  max-width: 100%;
-  margin: 0 25px 25px 0;
-  display: inline-block;
-  vertical-align: top;
+/* [/ref:A] */
+
+.task-container {
+  min-width: 50%;
+  max-width: 75%;
+  margin: 0 auto;
 }
 
-.drag-drop-list {
-  border: solid 1px #ccc;
-  min-height: 60px;
-  background: white;
+.task-column {
+  border: 1px solid #ccc;
+  min-height: 68px;
+  min-width: 50%;
+  background: #FFF;
   border-radius: 4px;
   overflow: hidden;
   display: block;
 }
 
-.drag-drop-box {
+.task-card {
+  cursor: move;
   padding: 20px 10px;
   border-bottom: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
-  cursor: move;
-  background: white;
+  min-height: 68px;
   font-size: 14px;
-}
-
-.cdk-drag-preview {
   box-sizing: border-box;
-  border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  justify-content: space-between;
+  align-items: center;
 }
-
-.cdk-drag-placeholder {
-  opacity: 0;
-}
-
-.cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.drag-drop-box:last-child {
-  border: none;
-}
-
-.drag-drop-list.cdk-drop-list-dragging .drag-drop-box:not(.cdk-drag-placeholder) {
-  transition: transform 25
-}
-
-/* [/ref:A] */
