--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
+<!--
+============================================
+; Title: nodebucket
+; Author: Professor Krasso
+; Date: 21 August 2022
+; Modified By: Seth Kerrey
+; Description: nodebucket app component
+; Code Attribution: Additional code from buwebdev
+;===========================================
+-->
+
 <router-outlet></router-outlet>
