--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -14,7 +14,7 @@
   <div fxFlex>
     <mat-card class="mat-elevation-z8">
 
-      <mat-card-title style="text-align:center;margin-bottom:70px;">About Nodebucket</mat-card-title>
+      <mat-card-title style="text-align:center;margin-bottom:70px;padding-top:15px;">About Nodebucket</mat-card-title>
       <mat-card-subtitle></mat-card-subtitle>
       <mat-card-content>
 
