--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,20 +12,19 @@
 -->
 
 <mat-card class="mat-elevation-z8">
-  <mat-card-title style="text-align: center;">
+  <mat-card-title style="text-align: center;padding-top:15px;">
     Workspace
   </mat-card-title>
   <br><br>
   <mat-card-content>
 
-    <!-- Column start -->
-    <div fxLayout="column">
-
-      <!-- Row 1 TASK INPUT -->
-      <div fxLayout="row">
+        <!-- Column 1 TODO -->
         <div fxFlex>
-          <div class="task-container mat-elevation-z4" fxLayout="column">
-            <mat-card>
+
+          <mat-card class="mat-elevation-z0">
+            <mat-card-title>ToDo</mat-card-title>
+            <mat-card-content>
+
               <form [formGroup]="taskForm" (ngSubmit)="createTask(); taskForm.reset()">
                 <mat-form-field appearance="fill" style="width: 100%">
 
@@ -54,22 +53,6 @@
                   The task field cannot exceed 35 characters in length.
                 </mat-error>
               </form>
-            </mat-card>
-          </div>
-        </div>
-      </div><!-- end row 1 -->
-
-      <br><br>
-
-      <!-- Row 2 TODO/DOING/DONE -->
-      <div fxLayout="row">
-
-        <!-- Column 1 TODO -->
-        <div fxFlex>
-
-          <mat-card class="mat-elevation-z0">
-            <mat-card-title>ToDo</mat-card-title>
-            <mat-card-content>
 
               <!-- Drag-Drop -->
               <div
@@ -89,7 +72,6 @@
                         <div fxFlex style="margin-top:7px;">
                           {{ item.text }}
                         </div>
-
 
                         <!-- Delete button -->
                         <div fxFlex fxLayoutAlign="end">
@@ -191,8 +173,7 @@
           </mat-card>
         </div><!-- end column 3-->
 
-      </div><!-- end row 2 -->
 
-    </div><!-- end column -->
+
   </mat-card-content>
 </mat-card>
