--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -11,9 +11,9 @@
 
 <div fxLayout="column">
 
-    <mat-card class="mat-elevation-z8">
+    <mat-card class="mat-elevation-z8" style="overflow:hidden">
 
-      <mat-card-title style="text-align:center;margin-bottom:100px;">Contact</mat-card-title>
+      <mat-card-title style="text-align:center;margin-bottom:100px;padding-top:15px;">Contact</mat-card-title>
       <mat-card-subtitle></mat-card-subtitle>
       <mat-card-content>
 
