--- a/src/app/shared/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/confirm-dialog/confirm-dialog.component.html
@@ -19,6 +19,6 @@
 <mat-divider></mat-divider>
 
 <div mat-dialog-actions align="end">
-  <button mat-raised-button matDialogClose="cancel" color="primary">No Thanks</button>
-  <button mat-raised-button matDialogClose="confirm" color="primary" cdkFocusInitial>confirm</button>
+  <button mat-raised-button matDialogClose="cancel">Cancel</button>
+  <button mat-raised-button matDialogClose="confirm" color="primary" cdkFocusInitial>Confirm</button>
 </div>
