--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -69,12 +69,13 @@
                     <mat-card-content>
                       <div fxLayout="row">
 
-                        <div fxFlex style="margin-top:7px;">
+                        <!-- Task text -->
+                        <div fxFlex fxLayoutAlign="start center">
                           {{ item.text }}
                         </div>
 
                         <!-- Delete button -->
-                        <div fxFlex fxLayoutAlign="end">
+                        <div fxFlex fxLayoutAlign="end center">
                           <button mat-icon-button (click)="deleteTask(item._id)">
                             <mat-icon color="warm">delete</mat-icon>
                           </button>
@@ -112,12 +113,13 @@
                     <mat-card-content>
                       <div fxLayout="row">
 
-                        <div fxFlex style="margin-top:7px;">
+                        <!-- Task text -->
+                        <div fxFlex fxLayoutAlign="start center">
                           {{ item.text }}
                         </div>
 
                         <!-- Delete button -->
-                        <div fxFlex fxLayoutAlign="end">
+                        <div fxFlex fxLayoutAlign="end center">
                           <button mat-icon-button (click)="deleteTask(item._id)">
                             <mat-icon color="warm">delete</mat-icon>
                           </button>
@@ -153,12 +155,13 @@
                     <mat-card-content>
                       <div fxLayout="row">
 
-                        <div fxFlex style="margin-top:7px;">
+                        <!-- Task text -->
+                        <div fxFlex fxLayoutAlign="start center">
                           {{ item.text }}
                         </div>
 
                         <!-- Delete button -->
-                        <div fxFlex fxLayoutAlign="end">
+                        <div fxFlex fxLayoutAlign="end center">
                           <button mat-icon-button (click)="deleteTask(item._id)">
                             <mat-icon color="warm">delete</mat-icon>
                           </button>
