--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -95,7 +95,7 @@
         <!-- Column 2 DOING -->
         <div fxFlex>
           <mat-card class="mat-elevation-z0">
-            <mat-card-title>Done</mat-card-title>
+            <mat-card-title>Doing</mat-card-title>
             <mat-card-content>
 
               <!-- Drag-Drop -->
